--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*
+ Theme Name: Fictional University
+ Author: Kurt
+ Version: 1.0
+*/
 /* 3rd party packages */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
